堆排序算法和深度优先排序算法学习

--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -5,6 +5,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
-
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
 sourceCompatibility = "1.7"
 targetCompatibility = "1.7"
