--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gwh.studyplan">
 
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
     <application
+        android:requestLegacyExternalStorage="true"
         android:name=".CommonApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,6 +25,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".CallActivity"/>
+        <activity android:name=".CameraActivity"
+            android:screenOrientation="portrait"
+            />
     </application>
 
 </manifest>
